grid-gap & margin of inventory page fixed

--- a/legendary-dragons-frontend/src/app/components/inventory-page/inventory-page.component.scss
+++ b/legendary-dragons-frontend/src/app/components/inventory-page/inventory-page.component.scss
@@ -16,5 +16,5 @@
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* specify the number of columns */
-  grid-gap: 30px; /* add padding between the elements */
+  grid-gap: 74px; /* add padding between the elements */
 }
